--- a/public/sass/sections/_candidats.sass
+++ b/public/sass/sections/_candidats.sass
@@ -6,6 +6,7 @@
     display: inline-block
     text-align: center
     border: solid 1px white
+    cursor: pointer
 
 .candidat-name
     font-size: 1.3em
