--- a/public/sass/components/_input.sass
+++ b/public/sass/components/_input.sass
@@ -8,6 +8,7 @@
     overflow: hidden
     background-color: transparent
     width: 180px
+    max-width: 90%
     border-radius: 5px
     color: $white
     margin: 10px auto 10px auto
